# whiskers-launcher-extension-example

./: Cargo.toml  README.md  linux-extension  manifest.json
src/: main.rs
src/assets/: mod.rs
